--- a/index.html
+++ b/index.html
@@ -11,36 +11,37 @@
     <div class="hero-img"></div>
     <div class="wrapper">
         <header>
-            <a href="https://instagram.com/rockie_tech">My<span>Shoes</span></a>
+            <a class="logo" href="https://instagram.com/rockie_tech">My<span>Shoes</span></a>
 
             <nav>
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">Sneakers</a></li>
                     <li><a href="">Players</a></li>
-                </ul>
-
-                <svg width="20" height="20" class="close" viewBox="0 0 75 54" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g filter="url(#filter0_d_64_4)">
-                    <line x1="4" y1="22.5" x2="71" y2="22.5" stroke="black" stroke-width="3"/>
-                    <line x1="4" y1="44.5" x2="71" y2="44.5" stroke="black" stroke-width="3"/>
-                    <line x1="4" y1="1.5" x2="71" y2="1.5" stroke="black" stroke-width="3"/>
-                    </g>
-                    <defs>
-                    <filter id="filter0_d_64_4" x="0" y="0" width="75" height="54" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-                    <feOffset dy="4"/>
-                    <feGaussianBlur stdDeviation="2"/>
-                    <feComposite in2="hardAlpha" operator="out"/>
-                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
-                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_64_4"/>
-                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_64_4" result="shape"/>
-                    </filter>
-                    </defs>
-                </svg>
-                    
+                </ul>                    
             </nav>
+
+            <svg class="close" viewBox="0 0 75 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_d_64_4)">
+                <line x1="4" y1="22.5" x2="71" y2="22.5" stroke="black" stroke-width="3"/>
+                <line x1="4" y1="44.5" x2="71" y2="44.5" stroke="black" stroke-width="3"/>
+                <line x1="4" y1="1.5" x2="71" y2="1.5" stroke="black" stroke-width="3"/>
+                </g>
+                <defs>
+                <filter id="filter0_d_64_4" x="0" y="0" width="75" height="54" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feOffset dy="4"/>
+                <feGaussianBlur stdDeviation="2"/>
+                <feComposite in2="hardAlpha" operator="out"/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_64_4"/>
+                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_64_4" result="shape"/>
+                </filter>
+                </defs>
+            </svg>
+
+
         </header>
 
         <section class="hero">
