Do the media queries on the medium size screens

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             </nav>
 
-            <svg class="close" viewBox="0 0 75 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="menu" viewBox="0 0 75 54" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g filter="url(#filter0_d_64_4)">
                 <line x1="4" y1="22.5" x2="71" y2="22.5" stroke="black" stroke-width="3"/>
                 <line x1="4" y1="44.5" x2="71" y2="44.5" stroke="black" stroke-width="3"/>
@@ -81,7 +81,7 @@
                     <p class="title">Lightweight</p>
                     <p class="description">The upper mesh material with all the proper ventilation for your feet and provides the best comfort as you do the sport.</p>
                 </div>
-                <img src="images/shoe1.jpg" alt="Another shoe">
+                <img src="images/shoe2.jpg" alt="Another shoe">
             </div>
 
             <div class="feature left">
@@ -97,7 +97,7 @@
                     <p class="title">Lightweight</p>
                     <p class="description">The upper mesh material with all the proper ventilation for your feet and provides the best comfort as you do the sport.</p>
                 </div>
-                <img src="images/shoe2.jpg" alt="Another shoe">
+                <img src="images/shoe1.jpg" alt="Another shoe">
             </div>
 
             <div class="feature left">
