--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/main.css">
-    <title>Document</title>
+    <title>MyShoes</title>
 </head>
 <body>
     <div class="hero-img"></div>
@@ -21,6 +21,7 @@
                     <li><a href="">Home</a></li>
                     <li><a href="">Sneakers</a></li>
                     <li><a href="">Players</a></li>
+                    <li><a href="">Contacts</a></li>
                 </ul> 
 
                                                 
@@ -62,7 +63,7 @@
         </header>
 
         <section class="hero">
-            <h1>Regain your confidence on Court</h1>
+            <h1>Regain your confidence on the Court</h1>
 
             <p class="subhead">A shoe that has been built to perfection for the perfect you</p>
 
