--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                     <li><a href="">Home</a></li>
                     <li><a href="">Sneakers</a></li>
                     <li><a href="">Players</a></li>
-                    <li><a href="">Contacts</a></li>
                 </ul> 
 
                                                 
@@ -63,7 +62,7 @@
         </header>
 
         <section class="hero">
-            <h1>Regain your confidence on the Court</h1>
+            <h1>Regain your confidence on Court</h1>
 
             <p class="subhead">A shoe that has been built to perfection for the perfect you</p>
 
